process of Hu's 15 and 9
